tests/checker/ok/deps/wasi/clocks@0.3.0-rc-2026-03-15/wall_clock.can
Clock = String

Datetime = String

now = (Clock) -> Datetime
