tests/checker/fail/free_function_ordering_violation.can
Zebra = () => String {
    "z"
}

Apple = () => String {
    "a"
}

Unit => Program {
    Apple() -> Print
    Zebra() -> Print
}
